<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AppBottomSheetDialogTheme">

    <TextView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/quicksand_semi_bold"
        android:gravity="center_vertical"
        android:text="@string/add_to_favourites"
        android:textColor="@color/darkColorPrimary"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_favourite_border" />

    <TextView
        android:id="@+id/watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/quicksand_semi_bold"
        android:gravity="center_vertical"
        android:text="@string/add_to_watchlist"
        android:textColor="@color/darkColorPrimary"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_watchlist"
        app:drawableTint="@color/lightColorPrimary" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/quicksand_semi_bold"
        android:gravity="center_vertical"
        android:text="@string/put_rating"
        android:textColor="@color/darkColorPrimary"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_star_border" />

</LinearLayout>